--- a/index.html
+++ b/index.html
@@ -312,9 +312,10 @@
 
             <section class="faq-section">
                 <div class="faq__q-container">
-                    <p class="faq__q">
-                        <span class="faq__letter">Q</span> What if I prefer to let my employees choose?
-                    </p>
+                    <div class="faq__letter">Q</div>
+                    <div class="faq__q">
+                         What if I prefer to let my employees choose?
+                    </div>
                 </div>
                 <div class="faq__a-container">
                     <p class="faq__a">
