--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         
         <section class="legislation-container">
 
-            <section class="legislation__section--one-third">
+            <div class="legislation__section--one-third-order">
                 <img class="legislation__img-taxcredit" src="./tax-credit.svg" alt=""/>
-            </section>
+            </div>
 
             <section class="legislation__section--two-thirds">
                 <h2 class="legislation__subheading">
@@ -168,141 +168,147 @@
 
     </section>
 
-    <!--This part will probably have to be redone... It completely changes on desktop-->
-        <div class="two-thirds">
-            <h2 class="two-thirds__heading">
-                Which plans quialfy?
-            </h2>
-            <p class="two-thirds__para">
-                Employer-sponsored group disability plans established or reopened for enrollment after January 1, 2017 qualify under the law.
-            </p>
-        </div>
 
-        <section class="benefits">
+    <section class="benefit">
 
-            <div class="benefit-item">
-                <h3 class="benefit-item__heading">
-                    Income replacement
-                </h3>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        short term disability
-                    </p>
-                    <p class="benefit__info">
-                        $200 per week
-                    </p>
-                </div>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        long term disability
-                    </p>
-                    <p class="benefit__info">
-                        50% of pre disability income*
-                    </p>
-                </div>
-            </div>
+        <section class="benefit-container">
 
-            <div class="benefit-item">
-                <h3 class="benefit-item__heading">
-                    Benefit period
-                </h3>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        short term disability
-                    </p>
-                    <p class="benefit__info">
-                        at least 6 months
-                    </p>
-                </div>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        long term disability
-                    </p>
-                    <p class="benefit__info">
-                        at least 24 months
-                    </p>
-                </div>
-            </div>
+            <section class="benefit__section--two-thirds">
+                <h2 class="benefit__subheading">
+                    Which plans qualify?
+                </h2>
+                <p class="benefit__info ">
+                    Employer-sponsored group disability plans established or reopened for enrollment after January 1, 2017 qualify under the law.
+                </p>
+            </section>
 
-            <div class="benefit-item">
-                <h3 class="benefit-item__heading">
-                    Elimination period
-                </h3>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        short term disability
-                    </p>
-                    <p class="benefit__info">
-                        no longer than 30 days
-                    </p>
-                </div>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        long term disability
-                    </p>
-                    <p class="benefit__info">
-                        no longer than 185 days
-                    </p>
-                </div>
-            </div>
+            <section class="benefit-chart">
 
-            <div class="benefit-item">
-                <h3 class="benefit-item__heading">
-                    Establishment date
-                </h3>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        short and long term disability
-                    </p>
-                    <p class="benefit__info">
-                        Estabished or reopened for enrollment after January 1, 2017
-                    </p>
+                <div class="benefit-item">
+                    <h3 class="benefit-item__heading">
+                        Income replacement
+                    </h3>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            short term disability
+                        </p>
+                        <p class="benefit-item__info">
+                            $200 per week
+                        </p>
+                    </div>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            long term disability
+                        </p>
+                        <p class="benefit-item__info">
+                            50% of pre disability income*
+                        </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="benefit-item">
-                <h3 class="benefit-item__heading">
-                    Opt-out provision
-                </h3>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        short and long term disability
-                    </p>
-                    <p class="benefit__info">
-                        Must allow employees to opt-out
-                    </p>
+                <div class="benefit-item">
+                    <h3 class="benefit-item__heading">
+                        Benefit period
+                    </h3>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            short term disability
+                        </p>
+                        <p class="benefit-item__info">
+                            at least 6 months
+                        </p>
+                    </div>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            long term disability
+                        </p>
+                        <p class="benefit-item__info">
+                            at least 24 months
+                        </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="benefit-item">
-                <h3 class="benefit-item__heading">
-                    Information requirements
-                </h3>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        short and long term disability
-                    </p>
-                    <p class="benefit__info">
-                        Must notify employees about coverage and opt-out process at least 30 days - and 10 days before their first payroll deduction
-                    </p>
+                <div class="benefit-item">
+                    <h3 class="benefit-item__heading">
+                        Elimination period
+                    </h3>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            short term disability
+                        </p>
+                        <p class="benefit-item__info">
+                            no longer than 30 days
+                        </p>
+                    </div>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            long term disability
+                        </p>
+                        <p class="benefit-item__info">
+                            no longer than 185 days
+                        </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="benefit-item">
-                <h3 class="benefit-item__heading">
-                    Plan type
-                </h3>
-                <div class="benefit-container">
-                    <p class="benefit__term">
-                        short and long term disability
-                    </p>
-                    <p class="benefit__info">
-                        Employer-sponsered group plan
-                    </p>
+                <div class="benefit-item">
+                    <h3 class="benefit-item__heading">
+                        Establishment date
+                    </h3>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            short and long term disability
+                        </p>
+                        <p class="benefit-item__info full-width">
+                            Estabished or reopened for enrollment after January 1, 2017
+                        </p>
+                    </div>
                 </div>
-            </div>
 
+                <div class="benefit-item">
+                    <h3 class="benefit-item__heading">
+                        Opt-out provision
+                    </h3>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            short and long term disability
+                        </p>
+                        <p class="benefit-item__info full-width">
+                            Must allow employees to opt-out
+                        </p>
+                    </div>
+                </div>
+
+                <div class="benefit-item">
+                    <h3 class="benefit-item__heading">
+                        Information requirements
+                    </h3>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            short and long term disability
+                        </p>
+                        <p class="benefit-item__info full-width">
+                            Must notify employees about coverage and opt-out process at least 30 days - and 10 days before their first payroll deduction
+                        </p>
+                    </div>
+                </div>
+
+                <div class="benefit-item">
+                    <h3 class="benefit-item__heading">
+                        Plan type
+                    </h3>
+                    <div class="benefit-item__container">
+                        <p class="benefit-item__term">
+                            short and long term disability
+                        </p>
+                        <p class="benefit-item__info full-width">
+                            Employer-sponsered group plan
+                        </p>
+                    </div>
+                </div>
+
+            </section>
         </section>
+    </section>
 
         <section class="faq">
 
@@ -310,57 +316,63 @@
                 Frequently Asked Questions
             </h2>
 
-            <section class="faq-section">
-                <div class="faq__q-container">
-                    <div class="faq__letter">Q</div>
-                    <div class="faq__q">
-                         What if I prefer to let my employees choose?
+            <section class="faq-container">
+
+                <section class="faq-section">
+                    <div class="faq__q-container">
+                        <div class="faq__letter">
+                            Q
+                        </div>
+                        <div class="faq__q">
+                            What if I prefer to let my employees choose?
+                        </div>
                     </div>
-                </div>
-                <div class="faq__a-container">
-                    <p class="faq__a">
-                        <span class="faq__letter">A</span> Whether you require employees to opt in or opt out of coverage, they're making a choice. Employees are free to decline auto-enrolled insurance, and they can cancel their coverage at any time.
-                    </p>
-                </div>
-            </section>
+                    <div class="faq__a-container">
+                        <p class="faq__a">
+                            <span class="faq__letter">A</span> Whether you require employees to opt in or opt out of coverage, they're making a choice. Employees are free to decline auto-enrolled insurance, and they can cancel their coverage at any time.
+                        </p>
+                    </div>
+                </section>
 
-            <section class="faq-section">
-                <div class="faq__q-container">
-                    <p class="faq__q">
-                        <span class="faq__letter">Q</span> Do employees really need disability insurance?
-                    </p>
-                </div>
-                <div class="faq__a-container">
-                    <p class="faq__a">
-                        <span class="faq__letter">A</span> Most Americans lack the savings to stay afloat without their paychecks. Research shows that 67% of U.S. workers would find it somewhat or very difficult to meet current financial obligations if their paycheck were delayed by one week. Long term disability customers who received benefit payments have told us that the coverage prevented more than 50% of them fro missing mortgage/rent payments, having to move out of their home, or missing other bills.
-                    </p>
-                </div>
-            </section>
+                <section class="faq-section">
+                    <div class="faq__q-container">
+                        <p class="faq__q">
+                            <span class="faq__letter">Q</span> Do employees really need disability insurance?
+                        </p>
+                    </div>
+                    <div class="faq__a-container">
+                        <p class="faq__a">
+                            <span class="faq__letter">A</span> Most Americans lack the savings to stay afloat without their paychecks. Research shows that 67% of U.S. workers would find it somewhat or very difficult to meet current financial obligations if their paycheck were delayed by one week. Long term disability customers who received benefit payments have told us that the coverage prevented more than 50% of them fro missing mortgage/rent payments, having to move out of their home, or missing other bills.
+                        </p>
+                    </div>
+                </section>
 
-            <section class="faq-section">
-                <div class="faq__q-container">
-                    <p class="faq__q">
-                        <span class="faq__letter">Q</span> What happens if an employee is enrolled, but doesn't want the coverage?
-                    </p>
-                </div>
-                <div class="faq__a-container">
-                    <p class="faq__a">
-                      <span class="faq__letter">A</span> Employees can cancel their coverage at any time, just by notifying Unum. Compare that to the hassle of trying to enroll and employee who has missed open enrollment. Or the pain of talking to an employee who didn't enroll, but now can't pay the bills due to missed work after an injury or illness.
-                    </p>
-                </div>
-            </section>
+                <section class="faq-section">
+                    <div class="faq__q-container">
+                        <p class="faq__q">
+                            <span class="faq__letter">Q</span> What happens if an employee is enrolled, but doesn't want the coverage?
+                        </p>
+                    </div>
+                    <div class="faq__a-container">
+                        <p class="faq__a">
+                        <span class="faq__letter">A</span> Employees can cancel their coverage at any time, just by notifying Unum. Compare that to the hassle of trying to enroll and employee who has missed open enrollment. Or the pain of talking to an employee who didn't enroll, but now can't pay the bills due to missed work after an injury or illness.
+                        </p>
+                    </div>
+                </section>
 
-            <section class="faq-section">
-                <div class="faq__q-container">
-                    <p class="faq__q">
-                      <span class="faq__letter">Q</span> Does auto-enroll increase our administrative burden?
-                    </p>
-                </div>
-                <div class="faq__a-container">
-                    <p class="faq__a">
-                        <span class="faq__letter">A</span> Not at all. In fact, auto-enroll makes enrollment easier for employers AND employees. And with Unum, you'll have all the resources you need to fulfill requirements like those set forth in the Maine legislation. Because we were able to provide input to this law, we unerstand Maine's legislation better than any other provider.
-                    </p>
-                </div>
+                <section class="faq-section">
+                    <div class="faq__q-container">
+                        <p class="faq__q">
+                        <span class="faq__letter">Q</span> Does auto-enroll increase our administrative burden?
+                        </p>
+                    </div>
+                    <div class="faq__a-container">
+                        <p class="faq__a">
+                            <span class="faq__letter">A</span> Not at all. In fact, auto-enroll makes enrollment easier for employers AND employees. And with Unum, you'll have all the resources you need to fulfill requirements like those set forth in the Maine legislation. Because we were able to provide input to this law, we unerstand Maine's legislation better than any other provider.
+                        </p>
+                    </div>
+                </section>
+
             </section>
 
         </section>
@@ -418,37 +430,6 @@
             </p>
 
         </footer>
-
-
-
-
-
-
-            
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
