Adding contact button

--- a/index.html
+++ b/index.html
@@ -16,18 +16,31 @@
 <body>
     <header class="header">
         <img class="header__logo" src="images/logo-unum-full-color.svg" alt="Unum Logo"/>
+        <a id="contact__button--header" class="contact__link--header" href="http://unum.mkt2189.com/autoenroll/" data-content="Contact your Unum representative">
+                Contact an expert
+                    <img class="contact__icon--header" src="../images/caret.svg" alt=""/>
+                </a>
     </header>
 
-        <section class="main-hero">
-            <div class="main-hero__container">
-                <h1 class="main-hero__heading">
-                    automatic enrollment for disability plans
-                </h1>
-                <p class="main-hero__content">
-                    Helping employees make the best choice
-                </p>
+    <section class="main-hero">
+        <div class="main-hero__container">
+            <h1 class="main-hero__heading">
+                automatic enrollment for disability plans
+            </h1>
+            <p class="main-hero__content">
+                Helping Maine employees make the best choice
+            </p>
+        </div>
+        <section class="video">
+            <div class="video__container">
+                <div class="video__wrapper">
+                <!--embed video here -->
+                    <iframe class="video__content" src="https://player.vimeo.com/video/196007504?color=3cb6ce&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <!--<div class="video__overlay"></div>-->
             </div>
         </section>
+    </section>
 
     <section class="statistics">
 
